--- a/scratch/tdma-rl/training.ipynb
+++ b/scratch/tdma-rl/training.ipynb
@@ -15,7 +15,9 @@
     "from ns3gym import ns3env\n",
     "from DQN_model import DeepQNetwork\n",
     "from DQN_model import Eval_Model\n",
-    "from DQN_model import Target_Model"
+    "from DQN_model import Target_Model\n",
+    "\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -27,11 +29,13 @@
     "learning_rate = 0.01\n",
     "reward_decay = 0.9\n",
     "e_greedy = 0.9\n",
-    "replace_target_iter = 300\n",
+    "replace_target_iter = 100\n",
     "memory_size = 500\n",
     "batch_size = 32\n",
-    "episodes = 1500\n",
-    "max_chosen = 3"
+    "episodes = 1000\n",
+    "max_chosen = 3\n",
+    "repeat_chosen = []\n",
+    "episode_time = 300"
    ]
   },
   {
@@ -40,17 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "port = 0\n",
-    "simTime = 20 # seconds\n",
-    "stepTime = 0.5  # seconds\n",
-    "seed = 0\n",
-    "simArgs = {\"--simTime\": simTime,\n",
-    "           \"--testArg\": 123}\n",
-    "\n",
-    "\n",
-    "\n",
-    "env = gym.make('ns3-v0')\n",
-    "#env = ns3env.Ns3Env(debug=True)\n",
+    "#env = gym.make('ns3-v0')\n",
+    "env = ns3env.Ns3Env(debug=True)\n",
     "\n",
     "#env.reset()\n",
     "\n",
@@ -82,10 +77,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for episode in range(1):\n",
+    "for episode in range(episodes):\n",
     "    print (\"-----------------------episodes: \", episode, \" -----------------------\")\n",
     "    stepIdx = 0\n",
-    "\n",
+    "    repeat_chosen_counter = 0\n",
+    "    \n",
     "    _obs = env.reset()\n",
     "    queueBytes = _obs[1][0]\n",
     "    \n",
@@ -97,20 +93,20 @@
     "        stepIdx += 1\n",
     "\n",
     "        action = np.array(RL.choose_action(_obs))\n",
-    "        #action = np.array([95,48,70])\n",
+    "\n",
     "        \n",
     "        # Using the queuing bytes to decide how many data slot would be choose\n",
-    "        #action_num = 0 if queueBytes == 0 else min(max(0, int(queueBytes/6250 - 0.3)) + 1, 3)\n",
-    "        #action_num = 0\n",
-    "        #action[action_num:] = [-1] * (max_chosen-action_num)\n",
+    "        action_num = 0 if queueBytes == 0 else min(max(0, int(queueBytes/6250 - 0.3)) + 1, 3)\n",
+    "        \n",
+    "        action[action_num:] = [-1] * (max_chosen-action_num)\n",
     "        \n",
     "        \n",
     "        #action = env.action_space.sample()\n",
     "        \n",
-    "        print(\"---action: \", action)\n",
-    "        print (\"Send to env\")\n",
+    "        #print(\"---action: \", action)\n",
+    "        #print (\"Send to env\")\n",
     "        obs, reward, done, info = env.step(action)\n",
-    "        print (\"Back!\")\n",
+    "        #print (\"Back!\")\n",
     "        # Get queuing bytes\n",
     "        queueBytes = obs[1][0]\n",
     "        \n",
@@ -122,7 +118,7 @@
     "        reward_all = [float(r) for r in info.split(',')]\n",
     "        info = stepIdx\n",
     "        \n",
-    "        print(\"Step: \", stepIdx)\n",
+    "        #print(\"Step: \", stepIdx)\n",
     "        #print(\"---obs, reward, done, info: \", obs, reward_all, done, info)\n",
     "        \n",
     "        obs = np.array(list(obs[0]) + list(obs[1][1:]))\n",
@@ -131,6 +127,8 @@
     "        for act, r in zip(action,reward_all):\n",
     "            RL.store_transition(_obs, act, r, obs)\n",
     "            \n",
+    "            if r <= -100:\n",
+    "                repeat_chosen_counter += 1\n",
     "        \n",
     "        if (stepIdx > 64*50) and (stepIdx % 5 == 0):\n",
     "            RL.learn()\n",
@@ -138,14 +136,13 @@
     "        # swap observation\n",
     "        _obs = obs\n",
     "        \n",
-    "        #if stepIdx % 100 == 0:\n",
-    "        #    print(\"Step: \", stepIdx)\n",
     "        \n",
-    "        if done or stepIdx == 64*6000:\n",
+    "        if done or stepIdx == int(300/0.132*64):\n",
     "            print(\"Step: \", stepIdx)\n",
     "            print (\"done\")\n",
     "            RL.learn()\n",
     "            \n",
+    "            repeat_chosen.append(repeat_chosen_counter)\n",
     "            break\n",
     "            \n",
     "        #break\n",
@@ -158,7 +155,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env.close()"
+    "# step counter of each episode\n",
+    "plt.plot(repeat_chosen)\n",
+    "plt.show()"
    ]
   },
   {
@@ -166,7 +165,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "env.close()"
+   ]
   }
  ],
  "metadata": {
