--- a/scratch/tdma-rl/training.ipynb
+++ b/scratch/tdma-rl/training.ipynb
@@ -16,6 +16,7 @@
     "from DQN_model import DeepQNetwork\n",
     "from DQN_model import Eval_Model\n",
     "from DQN_model import Target_Model\n",
+    "import tensorflow as tf\n",
     "\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -32,10 +33,14 @@
     "replace_target_iter = 100\n",
     "memory_size = 500\n",
     "batch_size = 32\n",
-    "episodes = 1000\n",
+    "training_episodes = 20\n",
+    "testing_episodes = 10\n",
     "max_chosen = 3\n",
-    "repeat_chosen = []\n",
-    "episode_time = 300"
+    "training_repeat_chosen = []\n",
+    "testing_repeat_chosen = []\n",
+    "episode_time = 300\n",
+    "eval_model_path = ''#'/workspace/model/eval_model'\n",
+    "target_model_path = ''#'/workspace/model/target_model'"
    ]
   },
   {
@@ -64,8 +69,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eval_model = Eval_Model(num_actions=ac_space.shape[0])\n",
-    "target_model = Target_Model(num_actions=ac_space.shape[0])\n",
+    "try:\n",
+    "    eval_model = tf.keras.models.load_model(eval_model_path)\n",
+    "    target_model = tf.keras.models.load_model(target_model_path)\n",
+    "    print('load model')\n",
+    "except:\n",
+    "    eval_model = Eval_Model(num_actions=ac_space.shape[0])\n",
+    "    target_model = Target_Model(num_actions=ac_space.shape[0])\n",
+    "    print('Create new model')\n",
     "RL = DeepQNetwork(ac_space.shape[0], max_chosen, ob_space_n,\n",
     "                  eval_model, target_model, learning_rate, reward_decay, e_greedy, \n",
     "                  replace_target_iter, memory_size, batch_size)"
@@ -77,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for episode in range(episodes):\n",
+    "for episode in range(training_episodes):\n",
     "    print (\"-----------------------episodes: \", episode, \" -----------------------\")\n",
     "    stepIdx = 0\n",
     "    repeat_chosen_counter = 0\n",
@@ -92,7 +103,7 @@
     "    while True:\n",
     "        stepIdx += 1\n",
     "\n",
-    "        action = np.array(RL.choose_action(_obs))\n",
+    "        action = np.array(RL.choose_action(_obs, True))\n",
     "\n",
     "        \n",
     "        # Using the queuing bytes to decide how many data slot would be choose\n",
@@ -107,6 +118,15 @@
     "        #print (\"Send to env\")\n",
     "        obs, reward, done, info = env.step(action)\n",
     "        #print (\"Back!\")\n",
+    "        \n",
+    "        if info == \"TimeOut\":\n",
+    "            print(\"Step: \", stepIdx)\n",
+    "            print (\"Repeat_chosen_counter :\", repeat_chosen_counter)\n",
+    "            RL.learn()\n",
+    "            \n",
+    "            training_repeat_chosen.append(repeat_chosen_counter)\n",
+    "            break\n",
+    "        \n",
     "        # Get queuing bytes\n",
     "        queueBytes = obs[1][0]\n",
     "        \n",
@@ -140,9 +160,98 @@
     "        if done or stepIdx == int(300/0.132*64):\n",
     "            print(\"Step: \", stepIdx)\n",
     "            print (\"done\")\n",
+    "            print (\"Repeat_chosen_counter :\", repeat_chosen_counter)\n",
     "            RL.learn()\n",
     "            \n",
-    "            repeat_chosen.append(repeat_chosen_counter)\n",
+    "            training_repeat_chosen.append(repeat_chosen_counter)\n",
+    "            break\n",
+    "            \n",
+    "        #break\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for episode in range(testing_episodes):\n",
+    "    print (\"-----------------------episodes: \", episode, \" -----------------------\")\n",
+    "    stepIdx = 0\n",
+    "    repeat_chosen_counter = 0\n",
+    "    \n",
+    "    _obs = env.reset()\n",
+    "    queueBytes = _obs[1][0]\n",
+    "    \n",
+    "    _obs = np.array(list(_obs[0]) + list(_obs[1][1:]))\n",
+    "    _obs = np.pad(_obs,(0, ob_space_n - _obs.size), constant_values = 0)\n",
+    "\n",
+    "    \n",
+    "    while True:\n",
+    "        stepIdx += 1\n",
+    "\n",
+    "        action = np.array(RL.choose_action(_obs, False))\n",
+    "\n",
+    "        \n",
+    "        # Using the queuing bytes to decide how many data slot would be choose\n",
+    "        action_num = 0 if queueBytes == 0 else min(max(0, int(queueBytes/6250 - 0.3)) + 1, 3)\n",
+    "        \n",
+    "        action[action_num:] = [-1] * (max_chosen-action_num)\n",
+    "        \n",
+    "        \n",
+    "        #action = env.action_space.sample()\n",
+    "        \n",
+    "        #print(\"---action: \", action)\n",
+    "        #print (\"Send to env\")\n",
+    "        obs, reward, done, info = env.step(action)\n",
+    "        #print (\"Back!\")\n",
+    "        \n",
+    "        if info == \"TimeOut\":\n",
+    "            print(\"Step: \", stepIdx)\n",
+    "            print (\"Repeat_chosen_counter :\", repeat_chosen_counter)\n",
+    "            RL.learn()\n",
+    "            \n",
+    "            testing_repeat_chosen.append(repeat_chosen_counter)\n",
+    "            break\n",
+    "        \n",
+    "        # Get queuing bytes\n",
+    "        queueBytes = obs[1][0]\n",
+    "        \n",
+    "        # Since there are multiple action in one step,\n",
+    "        # according to each action, it would have one reward.\n",
+    "        # But in ns3gym, the reward type is float, it means it can only return one reward,\n",
+    "        # we use the return info to send multiple reward\n",
+    "        \n",
+    "        reward_all = [float(r) for r in info.split(',')]\n",
+    "        info = stepIdx\n",
+    "        \n",
+    "        #print(\"Step: \", stepIdx)\n",
+    "        #print(\"---obs, reward, done, info: \", obs, reward_all, done, info)\n",
+    "        \n",
+    "        obs = np.array(list(obs[0]) + list(obs[1][1:]))\n",
+    "        obs = np.pad(obs,(0, ob_space_n - obs.size), constant_values = 0)\n",
+    "        \n",
+    "        for act, r in zip(action,reward_all):\n",
+    "            #RL.store_transition(_obs, act, r, obs)\n",
+    "            \n",
+    "            if r <= -100:\n",
+    "                repeat_chosen_counter += 1\n",
+    "        \n",
+    "        #if (stepIdx > 64*50) and (stepIdx % 5 == 0):\n",
+    "        #    RL.learn()\n",
+    "            \n",
+    "        # swap observation\n",
+    "        _obs = obs\n",
+    "        \n",
+    "        \n",
+    "        if done or stepIdx == int(300/0.132*64):\n",
+    "            print(\"Step: \", stepIdx)\n",
+    "            print (\"done\")\n",
+    "            print (\"Repeat_chosen_counter :\", repeat_chosen_counter)\n",
+    "            #RL.learn()\n",
+    "            \n",
+    "            testing_repeat_chosen.append(repeat_chosen_counter)\n",
     "            break\n",
     "            \n",
     "        #break\n",
@@ -156,8 +265,17 @@
    "outputs": [],
    "source": [
     "# step counter of each episode\n",
-    "plt.plot(repeat_chosen)\n",
+    "plt.plot(training_repeat_chosen)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RL.plot_cost()"
    ]
   },
   {
@@ -168,6 +286,23 @@
    "source": [
     "env.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eval_model.save('/workspace/model/eval_model', save_format='tf')\n",
+    "target_model.save('/workspace/model/target_model', save_format='tf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
