fixed crash bug

--- a/scratch/tdma-rl/test.ipynb
+++ b/scratch/tdma-rl/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "replace_target_iter = 100\n",
     "memory_size = 500\n",
     "batch_size = 32\n",
-    "training_episodes = 100\n",
+    "training_episodes = 20\n",
     "testing_episodes = 10\n",
     "max_chosen = 3\n",
     "training_repeat_chosen = []\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,131 +51,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-----------------------episodes:  0  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 160078\n",
-      "-----------------------episodes:  1  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 149252\n",
-      "-----------------------episodes:  2  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 163896\n",
-      "-----------------------episodes:  3  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 174682\n",
-      "-----------------------episodes:  4  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 183394\n",
-      "-----------------------episodes:  5  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 190490\n",
-      "-----------------------episodes:  6  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 190259\n",
-      "-----------------------episodes:  7  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 166341\n",
-      "-----------------------episodes:  8  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 160535\n",
-      "-----------------------episodes:  9  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 163918\n",
-      "-----------------------episodes:  10  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 179701\n",
-      "-----------------------episodes:  11  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 183300\n",
-      "-----------------------episodes:  12  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 183053\n",
-      "-----------------------episodes:  13  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 185861\n",
-      "-----------------------episodes:  14  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 186260\n",
-      "-----------------------episodes:  15  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 187707\n",
-      "-----------------------episodes:  16  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 187404\n",
-      "-----------------------episodes:  17  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 187579\n",
-      "-----------------------episodes:  18  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 188049\n",
-      "-----------------------episodes:  19  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 188551\n",
-      "-----------------------episodes:  20  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 187767\n",
-      "-----------------------episodes:  21  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 187914\n",
-      "-----------------------episodes:  22  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 188129\n",
-      "-----------------------episodes:  23  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 186898\n",
-      "-----------------------episodes:  24  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 187526\n",
-      "-----------------------episodes:  25  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 188526\n",
-      "-----------------------episodes:  26  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 188029\n",
-      "-----------------------episodes:  27  -----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_chosen_counter : 188875\n",
-      "-----------------------episodes:  28  -----------------------\n"
+      "-----------------------episodes:  0  -----------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:Internal Python error in the inspect module.\n",
+      "Below is the traceback from this internal error.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/IPython/core/interactiveshell.py\", line 3331, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"<ipython-input-4-23f108e2b230>\", line 51, in <module>\n",
+      "    RL.learn()\n",
+      "  File \"/tf/ns3-gym/scratch/tdma-rl/DQN_model.py\", line 110, in learn\n",
+      "    q_next = self.target_model.predict(batch_memory[:, -self.params['n_states']:])\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/training.py\", line 87, in _method_wrapper\n",
+      "    return method(self, *args, **kwargs)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/training.py\", line 1181, in predict\n",
+      "    model=self)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/data_adapter.py\", line 1124, in __init__\n",
+      "    model=model)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/data_adapter.py\", line 363, in __init__\n",
+      "    indices_dataset = indices_dataset.flat_map(slice_batch_indices)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/data/ops/dataset_ops.py\", line 1653, in flat_map\n",
+      "    return FlatMapDataset(self, map_func)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/data/ops/dataset_ops.py\", line 4065, in __init__\n",
+      "    map_func, self._transformation_name(), dataset=input_dataset)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/data/ops/dataset_ops.py\", line 3222, in __init__\n",
+      "    self._function = wrapper_fn.get_concrete_function()\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/eager/function.py\", line 2532, in get_concrete_function\n",
+      "    *args, **kwargs)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/eager/function.py\", line 2496, in _get_concrete_function_garbage_collected\n",
+      "    graph_function, args, kwargs = self._maybe_define_function(args, kwargs)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/eager/function.py\", line 2777, in _maybe_define_function\n",
+      "    graph_function = self._create_graph_function(args, kwargs)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/eager/function.py\", line 2667, in _create_graph_function\n",
+      "    capture_by_value=self._capture_by_value),\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/func_graph.py\", line 981, in func_graph_from_py_func\n",
+      "    func_outputs = python_func(*func_args, **func_kwargs)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/data/ops/dataset_ops.py\", line 3215, in wrapper_fn\n",
+      "    ret = _wrapper_helper(*args)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/data/ops/dataset_ops.py\", line 3157, in _wrapper_helper\n",
+      "    ret = autograph.tf_convert(func, ag_ctx)(*nested_args)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/autograph/impl/api.py\", line 262, in wrapper\n",
+      "    return converted_call(f, args, kwargs, options=options)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/autograph/impl/api.py\", line 492, in converted_call\n",
+      "    return _call_unconverted(f, args, kwargs, options)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/autograph/impl/api.py\", line 346, in _call_unconverted\n",
+      "    return f(*args, **kwargs)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/data_adapter.py\", line 348, in slice_batch_indices\n",
+      "    first_k_indices = array_ops.slice(indices, [0], [num_in_full_batch])\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/array_ops.py\", line 1037, in slice\n",
+      "    return gen_array_ops._slice(input_, begin, size, name=name)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/gen_array_ops.py\", line 9095, in _slice\n",
+      "    \"Slice\", input=input, begin=begin, size=size, name=name)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/op_def_library.py\", line 510, in _apply_op_helper\n",
+      "    base_types = [x.base_dtype for x in types]\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/op_def_library.py\", line 510, in <listcomp>\n",
+      "    base_types = [x.base_dtype for x in types]\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/dtypes.py\", line 87, in base_dtype\n",
+      "    if self._is_ref_dtype:\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/dtypes.py\", line 74, in _is_ref_dtype\n",
+      "    return self._type_enum > 100\n",
+      "KeyboardInterrupt\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/IPython/core/interactiveshell.py\", line 2044, in showtraceback\n",
+      "    stb = value._render_traceback_()\n",
+      "AttributeError: 'KeyboardInterrupt' object has no attribute '_render_traceback_'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/IPython/core/ultratb.py\", line 1148, in get_records\n",
+      "    return _fixed_getinnerframes(etb, number_of_lines_of_context, tb_offset)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/IPython/core/ultratb.py\", line 316, in wrapped\n",
+      "    return f(*args, **kwargs)\n",
+      "  File \"/usr/local/lib/python3.6/dist-packages/IPython/core/ultratb.py\", line 350, in _fixed_getinnerframes\n",
+      "    records = fix_frame_records_filenames(inspect.getinnerframes(etb, context))\n",
+      "  File \"/usr/lib/python3.6/inspect.py\", line 1490, in getinnerframes\n",
+      "    frameinfo = (tb.tb_frame,) + getframeinfo(tb, context)\n",
+      "  File \"/usr/lib/python3.6/inspect.py\", line 1448, in getframeinfo\n",
+      "    filename = getsourcefile(frame) or getfile(frame)\n",
+      "  File \"/usr/lib/python3.6/inspect.py\", line 696, in getsourcefile\n",
+      "    if getattr(getmodule(object, filename), '__loader__', None) is not None:\n",
+      "  File \"/usr/lib/python3.6/inspect.py\", line 742, in getmodule\n",
+      "    os.path.realpath(f)] = module.__name__\n",
+      "  File \"/usr/lib/python3.6/posixpath.py\", line 395, in realpath\n",
+      "    path, ok = _joinrealpath(filename[:0], filename, {})\n",
+      "  File \"/usr/lib/python3.6/posixpath.py\", line 429, in _joinrealpath\n",
+      "    if not islink(newpath):\n",
+      "  File \"/usr/lib/python3.6/posixpath.py\", line 171, in islink\n",
+      "    st = os.lstat(path)\n",
+      "KeyboardInterrupt\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m"
      ]
     }
    ],
    "source": [
-    "for episode in range(training_episodes):\n",
+    "for episode in range(1):\n",
     "    print (\"-----------------------episodes: \", episode, \" -----------------------\")\n",
     "    stepIdx = 0\n",
     "    repeat_chosen_counter = 0\n",
@@ -189,7 +188,7 @@
     "        stepIdx += 1\n",
     "        reward_all = []\n",
     "        \n",
-    "        action = np.array(RL.choose_action(_obs, True))\n",
+    "        action = np.array(RL.choose_action(_obs, False))\n",
     "\n",
     "        \n",
     "        # Using the queuing bytes to decide how many data slot would be choose\n",
@@ -202,11 +201,9 @@
     "        \n",
     "        obs = _obs\n",
     "        for a in action:\n",
-    "            if obs[a] != 0:\n",
-    "                reward_all.append(-100)\n",
-    "            else:\n",
+    "            if obs[a] == 0:\n",
     "                obs[a] = -1\n",
-    "                reward_all.append(0)\n",
+    "                reward_all.append(100)\n",
     "        \n",
     "        #print (\"obs: \",obs)\n",
     "        #print (\"reward:\", reward_all)\n",
