--- a/scratch/tdma-rl/training.ipynb
+++ b/scratch/tdma-rl/training.ipynb
@@ -31,17 +31,17 @@
     "reward_decay = 0.9\n",
     "e_greedy = 0.9\n",
     "replace_target_iter = 100\n",
-    "memory_size = 500\n",
+    "memory_size = 1000\n",
     "batch_size = 32\n",
-    "training_episodes = 20\n",
-    "testing_episodes = 10\n",
+    "training_episodes = 100\n",
     "max_choice = 3\n",
     "training_repeat_choice = []\n",
     "testing_repeat_choice = []\n",
     "optimized_choice = []\n",
+    "throughput_list = []\n",
     "episode_time = 300\n",
-    "eval_model_weights_path = '/workspace/model/eval_model_weights'\n",
-    "target_model_weights_path = '/workspace/model/target_model_weights'\n"
+    "eval_model_weights_path = ''#'/workspace/model/eval_model_weights'\n",
+    "target_model_weights_path = ''#'/workspace/model/target_model_weights'\n"
    ]
   },
   {
@@ -115,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for episode in range(training_episodes):\n",
+    "for episode in range(1):\n",
     "\n",
     "    isTraining = True if (episode+1)%10 != 0 else False\n",
     "    if isTraining:\n",
@@ -128,6 +128,7 @@
     "    total_choice_counter = 0\n",
     "    optimized_choice_counter = 0\n",
     "    nonRepeat_choice_counter = 0\n",
+    "    throughput = 0\n",
     "    \n",
     "    _obs = env.reset()\n",
     "    queueBytes = _obs[1][0]\n",
@@ -154,10 +155,11 @@
     "            Repeat_choice_ratio = repeat_choice_counter/total_choice_counter if total_choice_counter != 0 else 0\n",
     "            print (\"Repeat_choice_ratio :\", Repeat_choice_ratio)\n",
     "            print (\"Repeat_choice_counter :\", repeat_choice_counter)\n",
+    "            print (\"Throughput :\", throughput)\n",
     "            \n",
     "            if isTraining :\n",
     "                RL.learn()\n",
-    "                if total_choice_counter != 0:\n",
+    "                if total_choice_counter != 0:  \n",
     "                    training_repeat_choice.append(Repeat_choice_ratio)\n",
     "            else:\n",
     "                if total_choice_counter != 0:\n",
@@ -165,7 +167,9 @@
     "            \n",
     "            if nonRepeat_choice_counter != 0:\n",
     "                optimized_choice.append(optimized_choice_counter/nonRepeat_choice_counter)\n",
-    "                \n",
+    "            \n",
+    "            throughput_list.append(throughput)\n",
+    "            \n",
     "            break\n",
     "        \n",
     "        choosable_slotNum = min(n_slotUsedTable - np.nonzero(obs[0])[0].size,max_choice)\n",
@@ -179,6 +183,9 @@
     "        # we use the return info to send multiple reward\n",
     "        \n",
     "        reward_all = [float(r) for r in info.split(',')]\n",
+    "        throughput = reward_all[-1]\n",
+    "        reward_all = reward_all[:-1]\n",
+    "        \n",
     "        #reward_all = [0,0,0]\n",
     "        info = stepIdx\n",
     "         \n",
@@ -198,10 +205,15 @@
     "            if act == -1:\n",
     "                continue\n",
     "            \n",
+    "            \n",
     "            total_choice_counter += 1\n",
     "            \n",
     "            if (act not in np.nonzero(_obs[:n_slotUsedTable])[0]):\n",
     "                r += 0.5\n",
+    "                \n",
+    "                #print (\"act:\",act)\n",
+    "                #print (\"r:\",r)\n",
+    "                #print (\"throughput:\",throughput)\n",
     "                \n",
     "                isChosen = False\n",
     "                \n",
@@ -237,7 +249,7 @@
     "        #if stepIdx % 10000 == 0:\n",
     "        #    print(\"Step: \", stepIdx)\n",
     "        \n",
-    "        if (stepIdx > 5000) and (stepIdx % 5 == 0) and isTraining:\n",
+    "        if (total_choice_counter > 1000) and (total_choice_counter % 10 == 0) and isTraining:\n",
     "            RL.learn()\n",
     "            \n",
     "        # swap observation\n",
@@ -251,6 +263,7 @@
     "            Repeat_choice_ratio = repeat_choice_counter/total_choice_counter if total_choice_counter != 0 else 0\n",
     "            print (\"Repeat_choice_ratio :\", Repeat_choice_ratio)\n",
     "            print (\"Repeat_choice_counter :\", repeat_choice_counter)\n",
+    "            print (\"Throughput :\", throughput)\n",
     "            \n",
     "            if isTraining:\n",
     "                RL.learn()\n",
@@ -260,6 +273,8 @@
     "            \n",
     "            if nonRepeat_choice_counter != 0:\n",
     "                optimized_choice.append(optimized_choice_counter/nonRepeat_choice_counter)\n",
+    "            \n",
+    "            throughput_list.append(throughput)\n",
     "            \n",
     "            break\n",
     "            \n",
@@ -280,6 +295,9 @@
     "plt.show()\n",
     "\n",
     "plt.plot(testing_repeat_choice)\n",
+    "plt.show()\n",
+    "\n",
+    "plt.plot(throughput_list)\n",
     "plt.show()"
    ]
   },
