modify traffic generate

--- a/scratch/tdma-rl/training.ipynb
+++ b/scratch/tdma-rl/training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
     "replace_target_iter = 100\n",
     "memory_size = 1000\n",
     "batch_size = 32\n",
-    "training_episodes = 100\n",
+    "training_episodes = 50\n",
     "max_choice = 3\n",
     "training_repeat_choice = []\n",
     "testing_repeat_choice = []\n",
@@ -46,9 +46,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got new port for ns3gm interface:  5876\n",
+      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=5876 --simSeed=3267600854\"\n",
+      "Started ns3 simulation script, Process Id:  27792\n",
+      "Observation space:  Dict(pktBytes:Box(4,), slotUsedTable:Box(32,)) None\n",
+      "Action space:  Box(32,) int64\n",
+      "n_action:  32\n"
+     ]
+    }
+   ],
    "source": [
     "#env = gym.make('ns3-v0')\n",
     "env = ns3env.Ns3Env(debug=True)\n",
@@ -68,9 +81,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Create new model\n"
+     ]
+    }
+   ],
    "source": [
     "eval_model = Eval_Model(num_actions=ac_space.shape[0])\n",
     "target_model = Target_Model(num_actions=ac_space.shape[0])\n",
@@ -89,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +134,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------------------episodes:  0  (Training)----------------------\n"
+     ]
+    }
+   ],
    "source": [
     "for episode in range(1):\n",
     "\n",
