--- a/scratch/tdma-rl/training.ipynb
+++ b/scratch/tdma-rl/training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,9 +46,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got new port for ns3gm interface:  9934\n",
+      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=9934 --simSeed=3795307641\"\n",
+      "Started ns3 simulation script, Process Id:  17705\n",
+      "Observation space:  Dict(pktBytes:Box(4,), slotUsedTable:Box(32,)) None\n",
+      "Action space:  Box(32,) int64\n",
+      "n_action:  32\n"
+     ]
+    }
+   ],
    "source": [
     "#env = gym.make('ns3-v0')\n",
     "env = ns3env.Ns3Env(debug=True)\n",
@@ -68,9 +81,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Create new model\n"
+     ]
+    }
+   ],
    "source": [
     "eval_model = Eval_Model(num_actions=ac_space.shape[0])\n",
     "target_model = Target_Model(num_actions=ac_space.shape[0])\n",
@@ -89,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,9 +134,107 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------------------episodes:  0  (Training)----------------------\n",
+      "Step:  120000\n",
+      "done\n",
+      "Repeat_choice_ratio : 0.21190965581041166\n",
+      "Repeat_choice_counter : 71240\n",
+      "Throughput : 81333.0\n",
+      "-----------------------episodes:  1  (Training)----------------------\n",
+      "Got new port for ns3gm interface:  8379\n",
+      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=8379 --simSeed=3599096750\"\n",
+      "Started ns3 simulation script, Process Id:  11267\n",
+      "Step:  120000\n",
+      "done\n",
+      "Repeat_choice_ratio : 0.21524537218442394\n",
+      "Repeat_choice_counter : 72511\n",
+      "Throughput : 80361.0\n",
+      "-----------------------episodes:  2  (Training)----------------------\n",
+      "Got new port for ns3gm interface:  8782\n",
+      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=8782 --simSeed=1578943919\"\n",
+      "Started ns3 simulation script, Process Id:  3071\n",
+      "Step:  120000\n",
+      "done\n",
+      "Repeat_choice_ratio : 0.22040221094244244\n",
+      "Repeat_choice_counter : 74207\n",
+      "Throughput : 81046.0\n",
+      "-----------------------episodes:  3  (Training)----------------------\n",
+      "Got new port for ns3gm interface:  9253\n",
+      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=9253 --simSeed=1424831708\"\n",
+      "Started ns3 simulation script, Process Id:  28127\n",
+      "Step:  120000\n",
+      "done\n",
+      "Repeat_choice_ratio : 0.2284552124008993\n",
+      "Repeat_choice_counter : 77227\n",
+      "Throughput : 79735.0\n",
+      "-----------------------episodes:  4  (Training)----------------------\n",
+      "Got new port for ns3gm interface:  6475\n",
+      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=6475 --simSeed=206133246\"\n",
+      "Started ns3 simulation script, Process Id:  21709\n",
+      "Step:  120000\n",
+      "done\n",
+      "Repeat_choice_ratio : 0.23047162043718072\n",
+      "Repeat_choice_counter : 78096\n",
+      "Throughput : 79294.0\n",
+      "-----------------------episodes:  5  (Training)----------------------\n",
+      "Got new port for ns3gm interface:  8573\n",
+      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=8573 --simSeed=3420086187\"\n",
+      "Started ns3 simulation script, Process Id:  14612\n",
+      "Step:  120000\n",
+      "done\n",
+      "Repeat_choice_ratio : 0.22847894913715341\n",
+      "Repeat_choice_counter : 77506\n",
+      "Throughput : 78914.0\n",
+      "-----------------------episodes:  6  (Training)----------------------\n",
+      "Got new port for ns3gm interface:  8991\n",
+      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=8991 --simSeed=2542579491\"\n",
+      "Started ns3 simulation script, Process Id:  7203\n",
+      "Step:  120000\n",
+      "done\n",
+      "Repeat_choice_ratio : 0.23042957596923005\n",
+      "Repeat_choice_counter : 78123\n",
+      "Throughput : 79084.0\n",
+      "-----------------------episodes:  7  (Training)----------------------\n",
+      "Got new port for ns3gm interface:  8368\n",
+      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=8368 --simSeed=2408543268\"\n",
+      "Started ns3 simulation script, Process Id:  546\n",
+      "Step:  120000\n",
+      "done\n",
+      "Repeat_choice_ratio : 0.2266843853820598\n",
+      "Repeat_choice_counter : 76761\n",
+      "Throughput : 79492.0\n",
+      "-----------------------episodes:  8  (Training)----------------------\n",
+      "Got new port for ns3gm interface:  9496\n",
+      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=9496 --simSeed=3689195511\"\n",
+      "Started ns3 simulation script, Process Id:  25581\n",
+      "Step:  120000\n",
+      "done\n",
+      "Repeat_choice_ratio : 0.23136594090432058\n",
+      "Repeat_choice_counter : 78263\n",
+      "Throughput : 79520.0\n",
+      "-----------------------episodes:  9  (Testing)-----------------------\n",
+      "Got new port for ns3gm interface:  5425\n",
+      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=5425 --simSeed=2270219792\"\n",
+      "Started ns3 simulation script, Process Id:  16778\n",
+      "Step:  120000\n",
+      "done\n",
+      "Repeat_choice_ratio : 0.232769677892494\n",
+      "Repeat_choice_counter : 77128\n",
+      "Throughput : 62191.0\n",
+      "-----------------------episodes:  10  (Training)----------------------\n",
+      "Got new port for ns3gm interface:  7274\n",
+      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=7274 --simSeed=839391355\"\n",
+      "Started ns3 simulation script, Process Id:  23962\n"
+     ]
+    }
+   ],
    "source": [
-    "for episode in range(1):\n",
+    "for episode in range(training_episodes):\n",
     "\n",
     "    isTraining = True if (episode+1)%10 != 0 else False\n",
     "    if isTraining:\n",
