RL choice only from available slot & fixed slot selection module bug

--- a/scratch/tdma-rl/training.ipynb
+++ b/scratch/tdma-rl/training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
     "reward_decay = 0.9\n",
     "e_greedy = 0.9\n",
     "replace_target_iter = 100\n",
-    "memory_size = 1000\n",
+    "memory_size = 500\n",
     "batch_size = 32\n",
     "training_episodes = 50\n",
     "max_choice = 3\n",
@@ -46,22 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Got new port for ns3gm interface:  9934\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=9934 --simSeed=3795307641\"\n",
-      "Started ns3 simulation script, Process Id:  17705\n",
-      "Observation space:  Dict(pktBytes:Box(4,), slotUsedTable:Box(32,)) None\n",
-      "Action space:  Box(32,) int64\n",
-      "n_action:  32\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#env = gym.make('ns3-v0')\n",
     "env = ns3env.Ns3Env(debug=True)\n",
@@ -81,17 +68,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Create new model\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "eval_model = Eval_Model(num_actions=ac_space.shape[0])\n",
     "target_model = Target_Model(num_actions=ac_space.shape[0])\n",
@@ -110,13 +89,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def slot_select(q_values,choosable_slotNum):\n",
+    "def slot_select(q_values, choosable_slotNum, slot_table):\n",
+    "    # get top N value of q value\n",
+    "    q_values[np.nonzero(slot_table)] = -np.inf\n",
     "    action_unsort = np.argpartition(q_values,-max_choice)[-max_choice:]\n",
-    "    action = action_unsort[np.argsort(q_values[action_unsort])]\n",
+    "    \n",
+    "    # sort action num by q value\n",
+    "    action = action_unsort[np.argsort(-1*q_values[action_unsort])]\n",
+    "    \n",
     "    \n",
     "    max_choosable_slotNum = min(choosable_slotNum, max_choice)\n",
     "    # Using the queuing bytes to decide how many data slot would be choose\n",
@@ -134,105 +118,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-----------------------episodes:  0  (Training)----------------------\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_choice_ratio : 0.21190965581041166\n",
-      "Repeat_choice_counter : 71240\n",
-      "Throughput : 81333.0\n",
-      "-----------------------episodes:  1  (Training)----------------------\n",
-      "Got new port for ns3gm interface:  8379\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=8379 --simSeed=3599096750\"\n",
-      "Started ns3 simulation script, Process Id:  11267\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_choice_ratio : 0.21524537218442394\n",
-      "Repeat_choice_counter : 72511\n",
-      "Throughput : 80361.0\n",
-      "-----------------------episodes:  2  (Training)----------------------\n",
-      "Got new port for ns3gm interface:  8782\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=8782 --simSeed=1578943919\"\n",
-      "Started ns3 simulation script, Process Id:  3071\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_choice_ratio : 0.22040221094244244\n",
-      "Repeat_choice_counter : 74207\n",
-      "Throughput : 81046.0\n",
-      "-----------------------episodes:  3  (Training)----------------------\n",
-      "Got new port for ns3gm interface:  9253\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=9253 --simSeed=1424831708\"\n",
-      "Started ns3 simulation script, Process Id:  28127\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_choice_ratio : 0.2284552124008993\n",
-      "Repeat_choice_counter : 77227\n",
-      "Throughput : 79735.0\n",
-      "-----------------------episodes:  4  (Training)----------------------\n",
-      "Got new port for ns3gm interface:  6475\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=6475 --simSeed=206133246\"\n",
-      "Started ns3 simulation script, Process Id:  21709\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_choice_ratio : 0.23047162043718072\n",
-      "Repeat_choice_counter : 78096\n",
-      "Throughput : 79294.0\n",
-      "-----------------------episodes:  5  (Training)----------------------\n",
-      "Got new port for ns3gm interface:  8573\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=8573 --simSeed=3420086187\"\n",
-      "Started ns3 simulation script, Process Id:  14612\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_choice_ratio : 0.22847894913715341\n",
-      "Repeat_choice_counter : 77506\n",
-      "Throughput : 78914.0\n",
-      "-----------------------episodes:  6  (Training)----------------------\n",
-      "Got new port for ns3gm interface:  8991\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=8991 --simSeed=2542579491\"\n",
-      "Started ns3 simulation script, Process Id:  7203\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_choice_ratio : 0.23042957596923005\n",
-      "Repeat_choice_counter : 78123\n",
-      "Throughput : 79084.0\n",
-      "-----------------------episodes:  7  (Training)----------------------\n",
-      "Got new port for ns3gm interface:  8368\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=8368 --simSeed=2408543268\"\n",
-      "Started ns3 simulation script, Process Id:  546\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_choice_ratio : 0.2266843853820598\n",
-      "Repeat_choice_counter : 76761\n",
-      "Throughput : 79492.0\n",
-      "-----------------------episodes:  8  (Training)----------------------\n",
-      "Got new port for ns3gm interface:  9496\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=9496 --simSeed=3689195511\"\n",
-      "Started ns3 simulation script, Process Id:  25581\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_choice_ratio : 0.23136594090432058\n",
-      "Repeat_choice_counter : 78263\n",
-      "Throughput : 79520.0\n",
-      "-----------------------episodes:  9  (Testing)-----------------------\n",
-      "Got new port for ns3gm interface:  5425\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=5425 --simSeed=2270219792\"\n",
-      "Started ns3 simulation script, Process Id:  16778\n",
-      "Step:  120000\n",
-      "done\n",
-      "Repeat_choice_ratio : 0.232769677892494\n",
-      "Repeat_choice_counter : 77128\n",
-      "Throughput : 62191.0\n",
-      "-----------------------episodes:  10  (Training)----------------------\n",
-      "Got new port for ns3gm interface:  7274\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=7274 --simSeed=839391355\"\n",
-      "Started ns3 simulation script, Process Id:  23962\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for episode in range(training_episodes):\n",
     "\n",
@@ -247,6 +133,7 @@
     "    total_choice_counter = 0\n",
     "    optimized_choice_counter = 0\n",
     "    nonRepeat_choice_counter = 0\n",
+    "    nonLearn_data = 0\n",
     "    throughput = 0\n",
     "    \n",
     "    _obs = env.reset()\n",
@@ -261,7 +148,7 @@
     "    while True:\n",
     "        stepIdx += 1\n",
     "\n",
-    "        action = np.array(slot_select(RL.choose_action(_obs, isTraining),choosable_slotNum))\n",
+    "        action = np.array(slot_select(RL.choose_action(_obs, isTraining),choosable_slotNum,_obs[:n_slotUsedTable]))\n",
     "\n",
     "        \n",
     "        #print(\"---action: \", action)\n",
@@ -272,8 +159,8 @@
     "            print(\"Step: \", stepIdx)\n",
     "            \n",
     "            Repeat_choice_ratio = repeat_choice_counter/total_choice_counter if total_choice_counter != 0 else 0\n",
-    "            print (\"Repeat_choice_ratio :\", Repeat_choice_ratio)\n",
-    "            print (\"Repeat_choice_counter :\", repeat_choice_counter)\n",
+    "            #print (\"Repeat_choice_ratio :\", Repeat_choice_ratio)\n",
+    "            #print (\"Repeat_choice_counter :\", repeat_choice_counter)\n",
     "            print (\"Throughput :\", throughput)\n",
     "            \n",
     "            if isTraining :\n",
@@ -305,7 +192,7 @@
     "        throughput = reward_all[-1]\n",
     "        reward_all = reward_all[:-1]\n",
     "        \n",
-    "        #reward_all = [0,0,0]\n",
+    "        reward_all = [0,0,0]\n",
     "        info = stepIdx\n",
     "         \n",
     "        \n",
@@ -326,6 +213,7 @@
     "            \n",
     "            \n",
     "            total_choice_counter += 1\n",
+    "            nonLearn_data += 1\n",
     "            \n",
     "            if (act not in np.nonzero(_obs[:n_slotUsedTable])[0]):\n",
     "                r += 0.5\n",
@@ -368,7 +256,8 @@
     "        #if stepIdx % 10000 == 0:\n",
     "        #    print(\"Step: \", stepIdx)\n",
     "        \n",
-    "        if (total_choice_counter > 1000) and (total_choice_counter % 10 == 0) and isTraining:\n",
+    "        if (total_choice_counter > 1000) and (nonLearn_data > 10) and isTraining:\n",
+    "            nonLearn_data = 0\n",
     "            RL.learn()\n",
     "            \n",
     "        # swap observation\n",
@@ -380,8 +269,8 @@
     "            print (\"done\")\n",
     "            \n",
     "            Repeat_choice_ratio = repeat_choice_counter/total_choice_counter if total_choice_counter != 0 else 0\n",
-    "            print (\"Repeat_choice_ratio :\", Repeat_choice_ratio)\n",
-    "            print (\"Repeat_choice_counter :\", repeat_choice_counter)\n",
+    "            #print (\"Repeat_choice_ratio :\", Repeat_choice_ratio)\n",
+    "            #print (\"Repeat_choice_counter :\", repeat_choice_counter)\n",
     "            print (\"Throughput :\", throughput)\n",
     "            \n",
     "            if isTraining:\n",
@@ -410,11 +299,11 @@
     "plt.plot(optimized_choice)\n",
     "plt.show()\n",
     "\n",
-    "plt.plot(training_repeat_choice)\n",
-    "plt.show()\n",
+    "#plt.plot(training_repeat_choice)\n",
+    "#plt.show()\n",
     "\n",
-    "plt.plot(testing_repeat_choice)\n",
-    "plt.show()\n",
+    "#plt.plot(testing_repeat_choice)\n",
+    "#plt.show()\n",
     "\n",
     "plt.plot(throughput_list)\n",
     "plt.show()"
