--- a/scratch/tdma-rl/training.ipynb
+++ b/scratch/tdma-rl/training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,20 +35,33 @@
     "batch_size = 32\n",
     "training_episodes = 50\n",
     "max_choice = 3\n",
-    "training_repeat_choice = []\n",
-    "testing_repeat_choice = []\n",
     "optimized_choice = []\n",
     "throughput_list = []\n",
-    "episode_time = 300\n",
+    "throughput_history = []\n",
+    "max_throughput = 25*576*20\n",
+    "episode_time = 600\n",
     "eval_model_weights_path = ''#'/workspace/model/eval_model_weights'\n",
     "target_model_weights_path = ''#'/workspace/model/target_model_weights'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got new port for ns3gm interface:  9235\n",
+      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=9235 --simSeed=1063403101\"\n",
+      "Started ns3 simulation script, Process Id:  6986\n",
+      "Observation space:  Dict(pktBytes:Box(4,), slotUsedTable:Box(32,)) None\n",
+      "Action space:  Box(32,) int64\n",
+      "n_action:  32\n"
+     ]
+    }
+   ],
    "source": [
     "#env = gym.make('ns3-v0')\n",
     "env = ns3env.Ns3Env(debug=True)\n",
@@ -68,9 +81,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Create new model\n"
+     ]
+    }
+   ],
    "source": [
     "eval_model = Eval_Model(num_actions=ac_space.shape[0])\n",
     "target_model = Target_Model(num_actions=ac_space.shape[0])\n",
@@ -89,7 +110,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def slot_scoring(obs):\n",
+    "    values = np.random.random_sample((32,)) / 20\n",
+    "    \n",
+    "    #values = np.zeros((32,)) \n",
+    "    #values[np.nonzero(obs[:n_slotUsedTable])] = -np.inf\n",
+    "    \n",
+    "    top_index = []\n",
+    "    for i in range(3):\n",
+    "        top_index.append(np.ravel(np.argwhere(obs[:n_slotUsedTable]==i+1)))\n",
+    "    \n",
+    "    for act in range(32):\n",
+    "        r = 0\n",
+    "        max_r = 0\n",
+    "        for i in range(3):\n",
+    "            if any(act < idx for idx in top_index[i]):\n",
+    "                distance_map = top_index[i] - act\n",
+    "                distance = min(np.where(distance_map>0,distance_map,np.inf))\n",
+    "                closest_distance = 0\n",
+    "                for idx in range(int(distance)):\n",
+    "                    closest_distance = closest_distance + 1 if obs[act+idx] == 0 else closest_distance\n",
+    "                    \n",
+    "                distance_reward = (1.8-pow((closest_distance/10),0.5))\n",
+    "                #distance_reward = (pow((closest_distance/10),0.1)-0.7)\n",
+    "                size_weight = pow(_obs[-(3-i)],0.3)\n",
+    "                max_r =  max((distance_reward*size_weight/3),max_r)\n",
+    "                #r += (0.3*size_weight)\n",
+    "\n",
+    "            \n",
+    "        #if all(idx.size == 0 for idx in top_index):\n",
+    "        #    closest_distance = n_slotUsedTable - act\n",
+    "        #    #distance_reward = (1.2-pow((closest_distance/10),0.1))\n",
+    "        #    distance_reward = (pow((closest_distance/10),0.1)-0.7)\n",
+    "        #    r += distance_reward\n",
+    "                \n",
+    "        values[act] = r + max_r\n",
+    "    \n",
+    "    values[np.nonzero(obs[:n_slotUsedTable])] = -np.inf\n",
+    "    \n",
+    "    #print (\"obs:\",obs[:n_slotUsedTable])\n",
+    "    #print (\"values:\",values)\n",
+    "    \n",
+    "    return values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +189,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------------------episodes:  0  (Training)----------------------\n"
+     ]
+    }
+   ],
    "source": [
     "for episode in range(training_episodes):\n",
     "\n",
@@ -129,10 +208,8 @@
     "        print (\"-----------------------episodes: \", episode, \" (Testing)-----------------------\")\n",
     "\n",
     "    stepIdx = 0\n",
-    "    repeat_choice_counter = 0\n",
     "    total_choice_counter = 0\n",
     "    optimized_choice_counter = 0\n",
-    "    nonRepeat_choice_counter = 0\n",
     "    nonLearn_data = 0\n",
     "    throughput = 0\n",
     "    \n",
@@ -149,7 +226,8 @@
     "        stepIdx += 1\n",
     "\n",
     "        action = np.array(slot_select(RL.choose_action(_obs, isTraining),choosable_slotNum,_obs[:n_slotUsedTable]))\n",
-    "\n",
+    "        \n",
+    "        #action = np.array(slot_select(slot_scoring(_obs),choosable_slotNum,_obs[:n_slotUsedTable]))\n",
     "        \n",
     "        #print(\"---action: \", action)\n",
     "        obs, reward, done, info = env.step(action)\n",
@@ -158,21 +236,11 @@
     "        if info == \"TimeOut\":\n",
     "            print(\"Step: \", stepIdx)\n",
     "            \n",
-    "            Repeat_choice_ratio = repeat_choice_counter/total_choice_counter if total_choice_counter != 0 else 0\n",
-    "            #print (\"Repeat_choice_ratio :\", Repeat_choice_ratio)\n",
-    "            #print (\"Repeat_choice_counter :\", repeat_choice_counter)\n",
     "            print (\"Throughput :\", throughput)\n",
     "            \n",
-    "            if isTraining :\n",
-    "                RL.learn()\n",
-    "                if total_choice_counter != 0:  \n",
-    "                    training_repeat_choice.append(Repeat_choice_ratio)\n",
-    "            else:\n",
-    "                if total_choice_counter != 0:\n",
-    "                    testing_repeat_choice.append(Repeat_choice_ratio)\n",
-    "            \n",
-    "            if nonRepeat_choice_counter != 0:\n",
-    "                optimized_choice.append(optimized_choice_counter/nonRepeat_choice_counter)\n",
+    "\n",
+    "            if total_choice_counter != 0:\n",
+    "                optimized_choice.append(optimized_choice_counter/total_choice_counter)\n",
     "            \n",
     "            throughput_list.append(throughput)\n",
     "            \n",
@@ -192,9 +260,11 @@
     "        throughput = reward_all[-1]\n",
     "        reward_all = reward_all[:-1]\n",
     "        \n",
-    "        reward_all = [0,0,0]\n",
+    "        #reward_all = [0,0,0]\n",
     "        info = stepIdx\n",
-    "         \n",
+    "        \n",
+    "        if throughput != 0:\n",
+    "            throughput_history.append(throughput)\n",
     "        \n",
     "        #print(\"Step: \", stepIdx)\n",
     "        #print(\"---obs, reward, done, info: \", obs, reward_all, done, info)\n",
@@ -216,41 +286,48 @@
     "            nonLearn_data += 1\n",
     "            \n",
     "            if (act not in np.nonzero(_obs[:n_slotUsedTable])[0]):\n",
-    "                r += 0.5\n",
+    "                r += 0.2\n",
     "                \n",
     "                #print (\"act:\",act)\n",
     "                #print (\"r:\",r)\n",
     "                #print (\"throughput:\",throughput)\n",
     "                \n",
     "                isChosen = False\n",
-    "                \n",
+    "                max_r = 0\n",
     "                # Add optimized reward\n",
     "                for i in range(3):\n",
     "                    if any(act < idx for idx in top_index[i]):\n",
     "                        distance_map = top_index[i] - act\n",
-    "                        closest_distance = min(np.where(distance_map>0,distance_map,np.inf))\n",
-    "                        distance_reward = (1.2-pow((closest_distance/10),0.1))\n",
-    "                        size_weight = _obs[-(3-i)]\n",
-    "                        r += (distance_reward*size_weight)\n",
+    "                        distance = min(np.where(distance_map>0,distance_map,np.inf))\n",
+    "                        closest_distance = 0\n",
+    "                        for idx in range(closest_distance):\n",
+    "                            closest_distance = closest_distance + 1 if obs[act+idx] == 0 else closest_distance\n",
+    "                    \n",
+    "                        distance_reward = (1.8-pow((closest_distance/10),0.5))\n",
+    "                        #distance_reward = (pow((closest_distance/10),0.1)-0.7)\n",
+    "                        size_weight = pow(_obs[-(3-i)],0.3)\n",
+    "                        max_r =  max((distance_reward*size_weight/3),max_r) + throughput/max_throughput/2\n",
+    "                        #r += (0.3*size_weight) + throughput/max_throughput/2\n",
     "                        \n",
     "                        if not isChosen:\n",
     "                            isChosen = True\n",
     "                            optimized_choice_counter += 1\n",
-    "            \n",
+    "                            \n",
+    "                \"\"\"\n",
     "                if all(idx.size == 0 for idx in top_index):\n",
     "                    closest_distance = n_slotUsedTable - act\n",
-    "                    distance_reward = (1.2-pow((closest_distance/10),0.1))\n",
-    "                    r += distance_reward\n",
-    "                else:\n",
-    "                    nonRepeat_choice_counter += 1\n",
+    "                    #distance_reward = (1.2-pow((closest_distance/10),0.1))\n",
+    "                    distance_reward = (pow((closest_distance/10),0.1)-0.7)\n",
+    "                    r += distance_reward + throughput/max_throughput/2\n",
+    "                    #r += throughput/max_throughput/2\n",
+    "                \"\"\"\n",
     "                \n",
     "                \n",
     "                \n",
     "            if isTraining:\n",
+    "                r += max_r\n",
     "                RL.store_transition(_obs, act, r, obs)\n",
     "            \n",
-    "            if r <= 0:\n",
-    "                repeat_choice_counter += 1\n",
     "\n",
     "                \n",
     "        #if stepIdx % 10000 == 0:\n",
@@ -264,23 +341,15 @@
     "        _obs = obs\n",
     "        \n",
     "        \n",
-    "        if done or stepIdx == int(300/0.04*16):\n",
+    "        if done:\n",
     "            print(\"Step: \", stepIdx)\n",
     "            print (\"done\")\n",
     "            \n",
-    "            Repeat_choice_ratio = repeat_choice_counter/total_choice_counter if total_choice_counter != 0 else 0\n",
-    "            #print (\"Repeat_choice_ratio :\", Repeat_choice_ratio)\n",
-    "            #print (\"Repeat_choice_counter :\", repeat_choice_counter)\n",
     "            print (\"Throughput :\", throughput)\n",
     "            \n",
-    "            if isTraining:\n",
-    "                RL.learn()\n",
-    "                training_repeat_choice.append(Repeat_choice_ratio)\n",
-    "            else:\n",
-    "                testing_repeat_choice.append(Repeat_choice_ratio)\n",
     "            \n",
-    "            if nonRepeat_choice_counter != 0:\n",
-    "                optimized_choice.append(optimized_choice_counter/nonRepeat_choice_counter)\n",
+    "            if total_choice_counter != 0:\n",
+    "                optimized_choice.append(optimized_choice_counter/total_choice_counter)\n",
     "            \n",
     "            throughput_list.append(throughput)\n",
     "            \n",
@@ -299,11 +368,8 @@
     "plt.plot(optimized_choice)\n",
     "plt.show()\n",
     "\n",
-    "#plt.plot(training_repeat_choice)\n",
-    "#plt.show()\n",
-    "\n",
-    "#plt.plot(testing_repeat_choice)\n",
-    "#plt.show()\n",
+    "plt.plot(throughput_history)\n",
+    "plt.show()\n",
     "\n",
     "plt.plot(throughput_list)\n",
     "plt.show()"
