--- a/scratch/tdma-rl/training.ipynb
+++ b/scratch/tdma-rl/training.ipynb
@@ -27,13 +27,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learning_rate = 0.01\n",
+    "learning_rate = 0.001\n",
     "reward_decay = 0.9\n",
     "e_greedy = 0.9\n",
     "replace_target_iter = 100\n",
-    "memory_size = 500\n",
+    "memory_size = 5000\n",
     "batch_size = 32\n",
-    "training_episodes = 30\n",
+    "training_episodes = 1\n",
     "max_choice = 3\n",
     "optimized_choice = []\n",
     "throughput_list = []\n",
@@ -43,22 +43,22 @@
     "\n",
     "max_throughput = 25*576*20\n",
     "episode_time = 600\n",
-    "eval_model_weights_path = ''#'/workspace/model/eval_model_weights'\n",
-    "target_model_weights_path = ''#'/workspace/model/target_model_weights'\n"
+    "eval_model_weights_path = '/workspace/exp_replay_model/eval_model_weights'\n",
+    "target_model_weights_path = '/workspace/exp_replay_model/target_model_weights'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Got new port for ns3gm interface:  5572\n",
-      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=5572 --simSeed=1671773294\"\n",
-      "Started ns3 simulation script, Process Id:  130\n",
+      "Got new port for ns3gm interface:  8626\n",
+      "Start command:  /tf/ns3-gym/waf --run \"tdma-rl --openGymPort=8626 --simSeed=2745594271\"\n",
+      "Started ns3 simulation script, Process Id:  26935\n",
       "Observation space:  Dict(pktBytes:Box(4,), slotUsedTable:Box(32,)) None\n",
       "Action space:  Box(32,) int64\n",
       "n_action:  32\n"
@@ -84,14 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Create new model\n"
+      "Load weights from  /workspace/exp_replay_model/eval_model_weights  and  /workspace/exp_replay_model/target_model_weights\n"
      ]
     }
    ],
@@ -113,14 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def slot_scoring(obs):\n",
-    "    values = np.random.random_sample((32,)) / 20\n",
+    "    #values = np.random.random_sample((32,)) / 20\n",
     "    \n",
-    "    #values = np.zeros((32,)) \n",
+    "    values = np.zeros((32,)) \n",
     "    #values[np.nonzero(obs[:n_slotUsedTable])] = -np.inf\n",
     "    \n",
     "    top_index = []\n",
@@ -135,22 +135,15 @@
     "                distance_map = top_index[i] - act\n",
     "                distance = min(np.where(distance_map>0,distance_map,np.inf))\n",
     "                closest_distance = 0\n",
-    "                for idx in range(int(distance)):\n",
+    "                for idx in range(closest_distance):\n",
     "                    closest_distance = closest_distance + 1 if obs[act+idx] == 0 else closest_distance\n",
     "                    \n",
-    "                distance_reward = (1.8-pow((closest_distance/10),0.5))\n",
-    "                #distance_reward = (pow((closest_distance/10),0.1)-0.7)\n",
-    "                size_weight = pow(_obs[-(3-i)],0.3)\n",
-    "                max_r =  max((distance_reward*size_weight/3),max_r)\n",
-    "                #r += (0.3*size_weight)\n",
+    "                distance_reward = (1.5-pow((closest_distance/10),0.2))\n",
+    "                size_weight = _obs[-(3-i)]\n",
+    "                max_r =  max((distance_reward*size_weight/3 + throughput/max_throughput/2),max_r) \n",
     "\n",
-    "            \n",
-    "        #if all(idx.size == 0 for idx in top_index):\n",
-    "        #    closest_distance = n_slotUsedTable - act\n",
-    "        #    #distance_reward = (1.2-pow((closest_distance/10),0.1))\n",
-    "        #    distance_reward = (pow((closest_distance/10),0.1)-0.7)\n",
-    "        #    r += distance_reward\n",
-    "                \n",
+    "                        \n",
+    "\n",
     "        values[act] = r + max_r\n",
     "    \n",
     "    values[np.nonzero(obs[:n_slotUsedTable])] = -np.inf\n",
@@ -159,6 +152,19 @@
     "    #print (\"values:\",values)\n",
     "    \n",
     "    return values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def random_select(obs, max_slot):\n",
+    "    nonusedSlot = np.where(obs==0)[0]\n",
+    "    action = np.sort(np.random.choice(nonusedSlot,max_slot,replace=False))\n",
+    "    \n",
+    "    return action"
    ]
   },
   {
@@ -197,14 +203,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-----------------------episodes:  0  (Training)----------------------\n"
+      "-----------------------episodes:  0  (Testing)-----------------------\n"
      ]
     }
    ],
    "source": [
     "for episode in range(training_episodes):\n",
     "\n",
-    "    isTraining = True if (episode+1)%10 != 0 else False\n",
+    "    isTraining = False #True if (episode+1)%10 != 0 else False\n",
     "    if isTraining:\n",
     "        print (\"-----------------------episodes: \", episode, \" (Training)----------------------\")\n",
     "    else:\n",
@@ -231,6 +237,8 @@
     "\n",
     "        action = np.array(slot_select(RL.choose_action(_obs, isTraining),choosable_slotNum,_obs[:n_slotUsedTable]))\n",
     "        \n",
+    "        #action = np.array(random_select(_obs,2))\n",
+    "        #action = np.array(slot_select(np.random.random_sample(ac_space.shape[0]),choosable_slotNum,_obs[:n_slotUsedTable]))\n",
     "        #action = np.array(slot_select(slot_scoring(_obs),choosable_slotNum,_obs[:n_slotUsedTable]))\n",
     "        \n",
     "        #print(\"---action: \", action)\n",
@@ -240,8 +248,8 @@
     "        if info == \"TimeOut\":\n",
     "            print(\"Step: \", stepIdx)\n",
     "            \n",
-    "            print (\"Throughput :\", throughput)\n",
-    "            print (\"delay :\", delay,\" μs\")\n",
+    "            print (\"Throughput(Byte) :\", throughput)\n",
+    "            print (\"delay(μs) :\", delay)\n",
     "\n",
     "            if total_choice_counter != 0:\n",
     "                optimized_choice.append(optimized_choice_counter/total_choice_counter)\n",
@@ -313,24 +321,15 @@
     "                            closest_distance = closest_distance + 1 if obs[act+idx] == 0 else closest_distance\n",
     "                    \n",
     "                        distance_reward = (1.5-pow((closest_distance/10),0.2))\n",
-    "                        #distance_reward = (pow((closest_distance/10),0.1)-0.7)\n",
-    "                        #size_weight = pow(_obs[-(3-i)],0.3)\n",
     "                        size_weight = _obs[-(3-i)]\n",
     "                        max_r =  max((distance_reward*size_weight/3 + throughput/max_throughput/2),max_r) \n",
-    "                        #r += (0.3*size_weight) + throughput/max_throughput/2\n",
     "                        \n",
     "                        if not isChosen:\n",
     "                            isChosen = True\n",
     "                            optimized_choice_counter += 1\n",
     "                            \n",
-    "                \"\"\"\n",
     "                if all(idx.size == 0 for idx in top_index):\n",
-    "                    closest_distance = n_slotUsedTable - act\n",
-    "                    #distance_reward = (1.2-pow((closest_distance/10),0.1))\n",
-    "                    distance_reward = (pow((closest_distance/10),0.1)-0.7)\n",
-    "                    r += distance_reward + throughput/max_throughput/2\n",
-    "                    #r += throughput/max_throughput/2\n",
-    "                \"\"\"\n",
+    "                    max_r = throughput/max_throughput/2\n",
     "                \n",
     "                \n",
     "                \n",
@@ -343,9 +342,9 @@
     "        #if stepIdx % 10000 == 0:\n",
     "        #    print(\"Step: \", stepIdx)\n",
     "        \n",
-    "        if (total_choice_counter > 1000) and (nonLearn_data > 10) and isTraining:\n",
-    "            nonLearn_data = 0\n",
-    "            RL.learn()\n",
+    "        #if (total_choice_counter > 5000) and (nonLearn_data > 10) and isTraining:\n",
+    "        #    nonLearn_data = 0\n",
+    "        #    RL.learn()\n",
     "            \n",
     "        # swap observation\n",
     "        _obs = obs\n",
@@ -355,8 +354,8 @@
     "            print(\"Step: \", stepIdx)\n",
     "            print (\"done\")\n",
     "            \n",
-    "            print (\"Throughput :\", throughput)\n",
-    "            print (\"delay :\", delay,\" μs\")\n",
+    "            print (\"Throughput(Byte) :\", throughput)\n",
+    "            print (\"delay(μs) :\", delay)\n",
     "            \n",
     "            if total_choice_counter != 0:\n",
     "                optimized_choice.append(optimized_choice_counter/total_choice_counter)\n",
@@ -398,6 +397,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print (sum(throughput_list)/len(throughput_list))\n",
+    "print (sum(delay_list)/len(delay_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "RL.plot_cost()"
    ]
   },
@@ -416,8 +425,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eval_model.save_weights('/workspace/model/eval_model_weights')\n",
-    "target_model.save_weights('/workspace/model/target_model_weights')"
+    "eval_model.save_weights('/workspace/exp_replay_model/eval_model_weights')\n",
+    "target_model.save_weights('/workspace/exp_replay_model/target_model_weights')"
    ]
   },
   {
